fix spacing issues and change column grids

--- a/scss/mystyles.scss
+++ b/scss/mystyles.scss
@@ -2,7 +2,8 @@ body,
 div,
 h1,
 html,
-p {
+p,
+li {
     padding: 0;
     margin: 0;
     border: 0;
@@ -56,7 +57,6 @@ input#to-do {
 
 div.to-do-helper {
   color: #E91E63;
-  padding: 1%;
   position: relative;
   bottom: 0;
   transition: .2s;
@@ -78,11 +78,20 @@ button#add-to-do {
     text-transform: uppercase;
     border: 1px solid black;
     display: block;
-    margin: 5% auto 10%;
+    margin: 2% auto 1%;
     width: 50%;
+    position: relative;
+    background-color: #E91E63;
+    border: none;
     font: {
       weight: bolder;
       size: 3rem;
+    }
+    &:active, &:focus {
+      outline: none;
+    }
+    &:active {
+      top: 5px;
     }
 }
 
